# kubrics

./: .gitignore
api/: .env  .gitignore  docker-compose.minio.yml  pyproject.toml
api/src/kubric_api/: api.py  config.py  dependencies.py  models.py
api/src/kubric_api/services/: minio.py
api/src/kubric_api/utils/: log_conf.yml
kubric-api/: pyproject.toml
kubric-mcp/: .gitignore  pyproject.toml
kubric-mcp/.claude/: settings.local.json
kubric-mcp/src/kubric_mcp/: server.py
kubric-mcp/src/kubric_mcp/.claude/: settings.local.json
kubric-mcp/src/kubric_mcp/video/ingestion/: tools.py
kubric-mcp/volumes/milvus/etcd/member/snap/: db
kubric-mcp/volumes/milvus/rdb_data/: IDENTITY  LOG
kubric-mcp/volumes/milvus/rdb_data_meta_kv/: IDENTITY  LOG
mcp/: .gitignore  PROJECT_STRUCTURE_ANALYSIS.md  README.md  docker-compose.db.yml  minio.sh  postgres.sh  pyproject.toml
mcp/.claude/: settings.local.json
mcp/docker/minio/: README.md  init.sh  test_connection.py
mcp/docker/postgres/: README.md  init.sql  test_connection.py
mcp/src/kubric_mcp/: config.py  db.py  dependencies.py  server.py  tools.py
mcp/src/kubric_mcp/models/: __init__.py  audio.py  audio_index.py  frame_index.py  frames.py  video.py  video_registry.py
mcp/src/kubric_mcp/services/: __init__.py  audio_service.py  minio.py  video_service.py
mcp/src/kubric_mcp/video/ingestion/: video_processor.py
ui/: package-lock.json
ui/app/: page.tsx
ui/components/: VideoUpload.tsx
