[project]
name = "kubric-mcp"
version = "0.1.0"
description = ""
authors = [
    {name = "Gokulakrishnan",email = "sgokulcse10@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.5"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "pymilvus (>=2.6.2,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "duckdb (>=1.4.0,<2.0.0)",
    "prefect (>=3.4.20,<4.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "sentence-transformers (>=5.1.1,<6.0.0)",
    "moviepy (>=2.2.1,<3.0.0)",
    "fastmcp (>=2.12.4,<3.0.0)",
    "click (>=8.3.0,<9.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]

[tool.poetry]
packages = [{include = "kubric_mcp", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
