[project]
name = "kubric-mcp"
version = "0.1.0"
description = ""
authors = [
    {name = "Gokulakrishnan",email = "sgokulcse10@gmail.com"}
]
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "pymilvus (>=2.6.2,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "duckdb (>=1.4.0,<2.0.0)",
    "prefect (>=3.4.20,<4.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "sentence-transformers (>=5.1.1,<6.0.0)",
    "moviepy (>=2.2.1,<3.0.0)",
    "fastmcp (>=2.12.4,<3.0.0)",
    "click (>=8.3.0,<9.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.0.0,<8.0.0)",
    "ffmpeg (>=1.4,<2.0)",
    "groq (>=0.32.0,<0.33.0)",
    "openai (>=2.3.0,<3.0.0)",
    "pybase64 (>=1.4.2,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "minio (>=7.2.13,<8.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "pgvector (>=0.4.1,<0.5.0)",
    "numpy (>=2.0.0,<2.3.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scipy (>=1.16.2,<2.0.0)"
]

[project.scripts]
mcp-server = "kubric_mcp.server:run_mcp"

[tool.poetry]
packages = [{include = "kubric_mcp", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
